tx fat address / fee validation for tc txs
